[gd_scene load_steps=2 format=3 uid="uid://d4c0rhpuvv4pt"]

[ext_resource type="Script" path="res://ui/n_gram_creation_ui.gd" id="1_dap8h"]

[node name="NGramCreationUI" type="Control" node_paths=PackedStringArray("gram_points_field", "gram_radius_field", "create_gram_button", "generate_i_p_button", "clear_all_points_button")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dap8h")
gram_points_field = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/GramPoints")
gram_radius_field = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/GramRadius")
create_gram_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/CreateNGramButton")
generate_i_p_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/GenerateIntersectionPoints")
clear_all_points_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/ClearAllPointsButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 129.0
offset_bottom = 123.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "n:"

[node name="GramPoints" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "r:"

[node name="GramRadius" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateNGramButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Create n-gram"

[node name="GenerateIntersectionPoints" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate Intersection Points"

[node name="ClearAllPointsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Clear all points"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/CreateNGramButton" to="." method="_on_create_n_gram_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/GenerateIntersectionPoints" to="." method="_on_generate_intersection_points_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ClearAllPointsButton" to="." method="_on_clear_all_points_button_pressed"]
